Test exact Bootstrap method instrumentation